# discord-ipc-bridge

./: .gitignore  Cargo.toml  flake.nix
src/: lib.rs  main.rs
src/discord/: client.rs  mod.rs  payload.rs  response.rs  session.rs
src/ipc/: command.rs
